KB-11871:: accessSettings validation added for user enrolments